Bug 1085151 - avoid char (-1) in FilterList to compile on powerpc, r=rkent, a=rkent